--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
- "TOKEN": "",
+ "TOKEN": OTMwNzc4MzczOTUxNzQ2MTA4.Yd606Q.msCPVLBNFAbS2bpk-cZAN2tplKs
  "YOUTUBE_API_KEY": "",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
